--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -171,7 +171,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:backgroundTint="#00695C"
+                android:backgroundTint="#000000"
                 android:text="ĐĂNG KÝ"
                 android:textColor="#FFFFFF" />
 
