--- a/app/src/main/res/layout/activity_khac.xml
+++ b/app/src/main/res/layout/activity_khac.xml
@@ -24,7 +24,7 @@
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-
+                android:src="@drawable/ic_user"
                 android:layout_marginBottom="8dp"
                 />
 
@@ -89,12 +89,11 @@
                     android:text="Số điện thoại"
                     android:textSize="16sp"
                     android:textColor="#757575" />
-
                 <TextView
                     android:id="@+id/txt_SDT_TCN"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
+                    android:text="092345612"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -126,7 +125,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-
+                    android:src="@drawable/ic_profile"
                     android:padding="10dp" />
 
                 <TextView
@@ -156,7 +155,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-
+                    android:src="@drawable/changepassword"
                     android:padding="10dp" />
 
                 <TextView
@@ -187,9 +186,9 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginTop="100dp"
-
+            android:background="#00695C"
             android:text="Đăng Xuất"
-            android:textColor="@color/black"
+            android:textColor="#000000"
             android:textSize="19sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
