--- a/app/src/main/res/drawable/gradient_header.xml
+++ b/app/src/main/res/drawable/gradient_header.xml
@@ -4,7 +4,7 @@
 
     <gradient
         android:angle="0"
-        android:startColor="#4CAF50"
-        android:endColor="#FFFFFF"
+        android:endColor="#E1F5FE"
+        android:startColor="#4FC3F7"
         android:type="linear" />
 </shape>
