--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="24dp"
-
+        android:src="@android:drawable/ic_input_add"
         android:contentDescription="Thêm thể loại"
         app:backgroundTint="#039BE5"
         app:tint="@android:color/white"
